Fix: overflow hidden hid project-title::after

--- a/src/style.css
+++ b/src/style.css
@@ -339,7 +339,7 @@ textarea:focus-within {
     grid-column: 1 / 9;
     grid-row: 1 / 2;
     padding: 0 1rem;
-    min-height: 80px;
+    min-height: 100px;
     width: 100vw;
     display: grid;
     grid-template-columns: 3fr min-content min-content;
@@ -1275,7 +1275,7 @@ textarea:focus-within {
     justify-content: center;
     gap: 1rem;
     padding: 1rem;
-    height: 88vh;
+    height: calc(100vh - 100px);
     width: 98vw;
     overflow: scroll;
 }
@@ -1362,27 +1362,20 @@ textarea:focus-within {
 
 }
 
-.project-title::after {
+.project-description::after {
     position: absolute;
     content: "";
     height: 3px;
-    width: 106%;
-    bottom: -10px;
-    left: -3%;
+    width: 100%;
+    top: 55px;
+    z-index: 10;
+    left: 0;
     background: var(--contrast-orange-faded);
 }
 
-
-[id^="project-card-"].expanding .project-title::after,
-[id^="project-card-"].shrinking .project-title::after,
-[id^="project-card-"].expanded .project-title::after {
-    position: absolute;
-    content: "";
-    height: 3px;
-    width: 106%;
-    bottom: -10px;
-    left: -3%;
-    background: var(--contrast-orange-faded);
+[id^="project-card-"].expanding .project-description::after,
+[id^="project-card-"].shrinking .project-description::after,
+[id^="project-card-"].expanded .project-description::after {
     opacity: 0;
 }
 
@@ -1613,13 +1606,18 @@ ul.project-todos-list {
     justify-content: space-between;
     padding: 0 1rem;
     height: 4rem;
-    opacity: 1;
+    opacity: 0.7;
 
     transition: opacity 150ms ease-in-out,
                 border 200ms ease-in-out,
                 height 300ms ease-in-out,
                 padding 300ms ease-in-out,
                 align-items 300ms ease-in-out;
+}
+
+.todo-container:hover,
+.todo-container:focus-within {
+    opacity: 1;
 }
 
 .todo-title-checkbox-container > .project-todo > h4 {
@@ -2252,7 +2250,7 @@ tr > td:last-of-type {
     #search-flex {
         grid-column: 1 / 4;
         grid-row: 2 / 3;
-        padding: 0 2rem;
+        padding: 0 2rem 1rem 2rem;
         justify-content: end;
     }
 
@@ -2264,7 +2262,7 @@ tr > td:last-of-type {
 
     #dashboard-header {
         padding: 0 1rem;
-        height: 20vh;
+        height: 22vh;
         justify-content: center;
     }
 
@@ -2334,17 +2332,24 @@ tr > td:last-of-type {
         grid-row: 1 / 2;
     }
         
-    #create-project-form > label {
+    #create-project-form > label:not([id^="todo-input-"]) { 
         grid-column: 1 / 6;
         text-align: center;
         height: 30px;
     }
 
     #create-project-form > input:not([id^="todo-input-"]),
-    #create-project-form > label:not([id^="todo-input-"]), 
     #create-project-form > textarea:not([id^="create-project-todo-"]) {
         grid-column: 1 / 6;
         height: 35px;
+    }
+
+    #create-project-form [id^="todo-input-card-"] .create-project-todo-input {
+        min-height: 35px;
+    }
+
+    #create-project-form > #create-project-title {
+        margin-bottom: 0;
     }
 
     #create-project-form > #create-project-name-input {
